<resources>
    <string name="app_name">Juditon</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_finance">Finance</string>
    <string name="menu_banks">Banks</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_receipts">Receipts</string>
    <string name="menu_vouchers">Vouchers</string>

    <string name="menu_slideshow">Hr/Payrolls</string>
</resources>