<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_home"/>
        <item
                android:title="@string/menu_finance">
            <menu>
                <item
                        android:id="@+id/nav_accounts"
                        android:icon="@drawable/ic_menu_gallery"
                        android:title="@string/menu_accounts"/>
                <item
                        android:id="@+id/nav_banks"
                        android:icon="@drawable/banks"
                        android:title="@string/menu_banks"/>
                <item
                        android:id="@+id/nav_receipts"
                        android:icon="@drawable/ic_menu_gallery"
                        android:title="@string/menu_receipts"/>
                <item
                        android:id="@+id/nav_vouchers"
                        android:icon="@drawable/ic_menu_gallery"
                        android:title="@string/menu_vouchers"/>
            </menu>
        </item>
    </group>
</menu>