<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_home">

    <fragment
            android:id="@+id/nav_accounts"
            android:name="com.rickieyinnovates.juditon.fragments.AccountsFragment"
            android:label="@string/menu_accounts"
            tools:layout="@layout/fragment_accounts"/>
    <fragment
            android:id="@+id/nav_home"
            android:name="com.rickieyinnovates.juditon.fragments.HomeFragment"
            android:label="@string/menu_home"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/nav_banks"
            android:name="com.rickieyinnovates.juditon.fragments.BanksFragment"
            android:label="@string/menu_banks"
            tools:layout="@layout/fragment_banks"/>

    <fragment
            android:id="@+id/nav_receipts"
            android:name="com.rickieyinnovates.juditon.fragments.ReceiptsFragment"
            android:label="@string/menu_receipts"
            tools:layout="@layout/fragment_receipts"/>

    <fragment
            android:id="@+id/nav_vouchers"
            android:name="com.rickieyinnovates.juditon.fragments.VouchersFragment"
            android:label="@string/menu_vouchers"
            tools:layout="@layout/fragment_vouchers"/>

</navigation>